need to fix content spacing

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -136,3 +136,27 @@ ul.nav-buttons li:nth-child(4)  {
     padding-left: 4px;
     
 }
+.main {
+    width: 854px;
+    height: auto;
+    margin: 0 auto;
+}
+.content-left {
+    width: 328px;
+    height: 500px;
+    display: inline-block;
+    /* margin: 0 10px 0 0; */
+  
+    background-color: white;
+    margin-top: 5px;
+}
+
+.content-right {
+    width: 512px;
+    height: 500px;
+    display: inline-block;
+    background-color: white;
+    /* margin-top: 5px; */
+    margin: 5px 0 0 10px;
+    
+}
